# thermalFea

./: .gitignore  CMakeLists.txt  README.md  elementClasses.cpp  elementClasses.h  gaussianElim.py  meshClasses.cpp  meshClasses.h  oneDimPatchTest.cpp  polyArray.cpp  polyArray.h  solverClasses.cpp  testElementClasses.cpp  testMain.cpp  testPolyArray.cpp  testSolver.cpp
include/thermalFea/: elementClasses.hpp  mathUtils.hpp  meshClasses.hpp  polyArray.hpp  solverClasses.hpp
polySource/: oneDimPoly.cpp  oneDimPolyClass.h  twoDimPoly.cpp  twoDimPolyClass.h
prototyping/: triangleCstCheck.ipynb
src/thermalFea/: CMakeLists.txt  elementClasses.cpp  mathUtils.cpp  meshClasses.cpp  polyArray.cpp  solverClasses.cpp
tests/: CMakeLists.txt  oneDimPatchTest.cpp  testElementClasses.cpp  testMain.cpp  testPolyArray.cpp  testSolver.cpp
